RESOLVED FIXED310547
REGRESSION(309748@main) [WPE][GStreamer] imported/w3c/web-platform-tests/media-source/mediasource-append-buffer.html is flaky failing
https://bugs.webkit.org/show_bug.cgi?id=310547
Summary REGRESSION(309748@main) [WPE][GStreamer] imported/w3c/web-platform-tests/medi...
Lauro Moura
Reported 2026-03-23 09:54:09 PDT
imported/w3c/web-platform-tests/media-source/mediasource-append-buffer.html https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmedia-source%2Fmediasource-append-buffer.html Diff: --- /sdk/webkit/layout-test-results/imported/w3c/web-platform-tests/media-source/mediasource-append-buffer-expected.txt +++ /sdk/webkit/layout-test-results/imported/w3c/web-platform-tests/media-source/mediasource-append-buffer-actual.txt @@ -14,7 +14,7 @@ PASS Test appending a neutered ArrayBuffer. PASS Test appendBuffer with partial init segments. PASS Test appendBuffer with partial media segments. -FAIL Test appendBuffer events order. assert_true: expected true got false +FAIL Test appendBuffer events order. assert_equals: expected 1 but got 3 PASS Test abort in the middle of an initialization segment. PASS Test abort after removing sourcebuffer. PASS Test abort after readyState is ended following init segment and media segment. wk-testhunter shows it was quite stable before: The bot wpe-release completed 1475 runs on the interval [305729@main-309728@main] Frequency of results for test: imported/w3c/web-platform-tests/media-source/mediasource-append-buffer.html 1472 times [99.8%] -> NOERROR 2 times [0.1%] -> TEXT PASS 1 times [0.1%] -> TIMEOUT PASS Of those 1475 runs it didn't match the expectation 3 times [0.2%] Details of the type and frequency of unmatched expectations: 2 times [0.1%] -> TEXT PASS (Expected: PASS) 1 times [0.1%] -> TIMEOUT PASS (Expected: PASS) Flakiness factor: 0.4% - This test was flaky on 0.4% of the 1475 runs analyzed, either giving different results within a single run, or a different result than in the previous run. NOTE: glib.py sets GST_DEBUG to "*:ERROR" during tests which enables the new log handling from 309748@main. Alongside that, the event order checks might already be time sensitive, given the existing failure.
Attachments
Lauro Moura
Comment 1 2026-03-23 10:03:19 PDT
Test gardening pull request: https://github.com/WebKit/WebKit/pull/61170
EWS
Comment 2 2026-03-23 11:20:02 PDT
Test gardening commit 309773@main (e167c5b6fd82): <https://commits.webkit.org/309773@main> Reviewed commits have been landed. Closing PR #61170 and removing active labels.
Philippe Normand
Comment 3 2026-03-23 12:41:30 PDT
EWS
Comment 4 2026-03-24 04:48:08 PDT
Committed 309828@main (a6502dd669f6): <https://commits.webkit.org/309828@main> Reviewed commits have been landed. Closing PR #61187 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2026-03-24 04:49:14 PDT
Philippe Normand
Comment 6 2026-03-24 11:46:23 PDT
:(
Philippe Normand
Comment 7 2026-03-24 11:50:19 PDT
Philippe Normand
Comment 8 2026-03-25 09:41:11 PDT
I reproduced the issue here, will send another PR.
Philippe Normand
Comment 9 2026-03-25 09:48:11 PDT
EWS
Comment 10 2026-03-26 03:03:17 PDT
Committed 309979@main (ad2137dc2304): <https://commits.webkit.org/309979@main> Reviewed commits have been landed. Closing PR #61335 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.