REGRESSION(309748@main) [WPE][GStreamer] imported/w3c/web-platform-tests/media-source/mediasource-append-buffer.html is flaky failing https://bugs.webkit.org/show_bug.cgi?id=310547

Reviewed by Xabier Rodriguez-Calvar.

Exit early from the message handler if the message log level is higher than the webkitmsesourcebuffer
log level.

* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:
(WebCore::SourceBufferPrivateGStreamer::handleLogMessage):

Canonical link: https://commits.webkit.org/309828@main